# Chip8_Emu

./: README.md  chip8.sh
Core/: CMakeLists.txt
Core/Inc/: chip8.h
Core/Src/: chip8.cpp  main.cpp
